--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
+  min-width: 40%!important;
 }
 .card[data-state="#about"] {
   height: 450px;
