--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,34 @@
 body {
   color: #2b2c48;
   font-family: "Jost", sans-serif;
-  background-image: url('../img/background-img.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px;
 }
+
+.background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  display: block;
+  background-image: url('../img/background-img.jpg');
+  width: 100%;
+  height: 100%;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 .card {
   max-width: 340px;
   margin: auto;
@@ -151,37 +170,6 @@ body {
   font-weight: 400;
   font-family: "DM Sans", sans-serif;
   text-align: center;
-}
-.card-social {
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
-  margin-bottom: 30px;
-}
-.card-social svg {
-  fill: #a5b5ce;
-  width: 16px;
-  display: block;
-  transition: 0.3s;
-}
-.card-social a {
-  color: #8797a1;
-  height: 32px;
-  width: 32px;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-  background-color: rgba(93, 133, 193, 0.05);
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.card-social a:hover svg {
-  fill: #637faa;
-}
-.card-social a:last-child {
-  margin-right: 0;
 }
 .card-buttons {
   display: flex;
